fix(footer): logo works on mobile and mantains aspect ratio

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -186,6 +186,8 @@
         }
     }
     &_logo {
+        height: 100%;
+        aspect-ratio : 1 / 1;
         @include shared.not-mobile {
             grid-column: 1/2;
             grid-row: 1/2;
